2004-05-02  Anders Carlsson  <andersca@gnome.org>

	* libgnome/gnome-program.c: (gnome_program_get_property):
	Fix memory leak. (#135773, Christian Persche)
	
2004-05-02  Anders Carlsson  <andersca@gnome.org>

	* configure.in:
	* doc/reference/Makefile.am:
	* doc/reference/libgnome-docs.sgml:
	* doc/reference/version.xml.in:
	Put version number in reference docs.
	(#125759, Steve Chaplin)
	
2004-05-02  Anders Carlsson  <andersca@gnome.org>

	* libgnome/gnome-sound.c: Fix crash when reading invalid
	audio files. (#124519, Chris Lahey)

=================== 2.6.1.1 ===================

2004-04-20  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Fix soname and release 2.6.1.1

==================== 2.6.1 ====================

2004-04-19  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Version 2.6.1 "Triclops"

	* NEWS: Update

2004-04-13  Colin Walters  <walters@redhat.com>

	* libgnome/gnome-program.c: Remove G_PARAM_CONSTRUCT_ONLY from
	sound properties, since they are set slightly after object
	initialization.

2004-04-09  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.

2004-03-25  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-i18n.h: Fix comment after #endif to
	denote the right file. Patch from Gustavo R. Montesino 
	<ikki_gerrard at yahoo.com>. Closes bug #133788.

2004-03-22  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.

==================== 2.6.0 ====================

2004-03-22  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Version 2.6.0 "Zoomer"

	* Makefile.am (EXTRA_DIST): Add NEWS

	* NEWS: Update 

Wed Mar 17 12:34:30 2004  Jonathan Blandford  <jrb@gnome.org>

	* schemas/desktop_gnome_interface.schemas.in: Add
	file_chooser_backend schema.

2004-03-16  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.92.1

	* libgnome/gnome-init.c: (libgnome_userdir_setup),