@@ -8,4 +8,4 @@ soundlist_DATA = $(soundlist_in_files:.soundlist.in=.soundlist)
 
 @INTLTOOL_SOUNDLIST_RULE@
 
-EXTRA_DIST = $(soundlist_DATA)
+EXTRA_DIST = $(soundlist_in_files) $(soundlist_DATA)
